--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.28.2"
 [tool.poetry.dev-dependencies]
 black = "*"
 isort = "*"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core"]
