--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -54,5 +54,5 @@ jobs:
       - name: Run tests
         run: |
           source .venv/bin/activate
-          pytest tests/
+          pytest test/
           coverage report
